[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["yugetsu"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.11.4"
omegaconf = "^2.3.0"
matplotlib = "^3.8.2"
streamlit = "^1.30.0"


[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
isort = "^5.13.2"
pylint = "^3.2.2"
mypy = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
check_untyped_defs = true
no_strict_optional = true